@@ -11,7 +11,7 @@ import okhttp3.Request;
 import okhttp3.RequestBody;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -26,9 +26,9 @@ class BatchRequestBuilderTest {
         RequestBody requestBody = RequestBody.create("{}", MediaType.get(CoreConstants.MimeTypeNames.APPLICATION_JSON));
         Request request2 = new Request.Builder().url("https://graph.microsoft.com/v1.0/me/onenote/notebooks").post(requestBody).build();
         BatchRequestStep batchRequestStep = new BatchRequestStep("1", request);
-        BatchRequestStep batchRequestStep2 = new BatchRequestStep("2", request2, List.of("1"));
+        BatchRequestStep batchRequestStep2 = new BatchRequestStep("2", request2, Arrays.asList("1"));
 
-        BatchRequestContent batchRequestContent = new BatchRequestContent(client,List.of(batchRequestStep, batchRequestStep2));
+        BatchRequestContent batchRequestContent = new BatchRequestContent(client,Arrays.asList(batchRequestStep, batchRequestStep2));
         RequestInformation requestInformation = batchRequestBuilder.toPostRequestInformationAsync(batchRequestContent).join();
 
         assertEquals("{+baseurl}/$batch", requestInformation.urlTemplate);
